Fixed the care page with correct white background and photogaphs

--- a/Projects/Project_1/style.css
+++ b/Projects/Project_1/style.css
@@ -53,6 +53,7 @@ h3 {
 
 font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 font-size:40px;
+margin: 10%;
 }
 
 h4{
@@ -71,6 +72,17 @@ footer {
   width:100vw;
 }
 
+p{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin: 10%;
+}
+
+/*----------------------------------------- Our Team ----------------------------------------------*/
+
+.ourteam{
+  color: #ffffff;
+
+}
 
 /*----------------------------------------- Buttons / Navigation ----------------------------------------------*/
 
@@ -89,7 +101,7 @@ footer {
   background-image: url('Images/HomeHero.jpg');
   background-size:cover;
   width:100vw;
-  height:100vh;
+  height:50vh;
 }
 .home-top nav a {
 color: rgb(255, 255, 255);
@@ -223,8 +235,12 @@ h2 {
   background-color: #fff;
 }
 
-/* about page*/
+/* --------------------------------about page---------------------------------------*/
 
+.whoarewe{
+  margin: 10%;
+   
+}
 .ourteam{
   background-color: #1C1C23;
 }
